--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,22 @@ layout: default
 
     <br>
     <div>
+        
+        <div style="width:35%; float: left">
+            <!-- <h2>Instructors</h2> -->
+            <!-- <div class="image--cover-container">
+                <img src="{{site.data.people.instructor.profile_pic | prepend: site.baseurl }}" class="image--cover">
+                <p>{{site.data.people.instructor.name}}</p>
+            </div> -->
+
+            <div >
+                <h2>PhD Students</h2>
+                
+            </div>
+        </div>
+        
+        
+        
         <div style="width:35%; float: left">
             <!-- <h2>Instructors</h2> -->
             <!-- <div class="image--cover-container">
