--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,27 +26,53 @@ layout: default
     <br>
     <div>
         
-        <div style="width:35%; float: left">
-            <div >
-                <h2>PhD Students</h2>
-                
+       <div style="width:65%; float: left">
+            <div class="profile-pic-gallary ">
+                <h2>Phd Students</h2>
+                {% for ta in site.data.people.teaching_assistants %}
+                <div class="image--cover-container">
+                    <img src="{{ta.profile_pic | prepend: site.baseurl }}" class="image--cover">
+                    {% if ta.webpage %}
+                    <p><a href="{{ ta.webpage }}">{{ta.name}}</a></p>
+                    {% else %}
+                    <p>{{ta.name}}</p>
+                    {% endif %}
+                </div>
+                {% endfor %}
             </div>
         </div>
         
         
-        
-        <div style="width:35%; float: left">
-            <div >
-                <h2>PhD Undergraduates </h2>
-                
+        <div style="width:65%; float: left">
+            <div class="profile-pic-gallary ">
+                <h2>Undergraduates/Graduates</h2>
+                {% for ta in site.data.people.teaching_assistants %}
+                <div class="image--cover-container">
+                    <img src="{{ta.profile_pic | prepend: site.baseurl }}" class="image--cover">
+                    {% if ta.webpage %}
+                    <p><a href="{{ ta.webpage }}">{{ta.name}}</a></p>
+                    {% else %}
+                    <p>{{ta.name}}</p>
+                    {% endif %}
+                </div>
+                {% endfor %}
             </div>
         </div>
         
         
-        <div style="width:35%; float: left">
-            <div >
+       <div style="width:65%; float: left">
+            <div class="profile-pic-gallary ">
                 <h2>Visiting Research Scholars</h2>
-                
+                {% for ta in site.data.people.teaching_assistants %}
+                <div class="image--cover-container">
+                    <img src="{{ta.profile_pic | prepend: site.baseurl }}" class="image--cover">
+                    {% if ta.webpage %}
+                    <p><a href="{{ ta.webpage }}">{{ta.name}}</a></p>
+                    {% else %}
+                    <p>{{ta.name}}</p>
+                    {% endif %}
+                </div>
+                {% endfor %}
             </div>
         </div>
         
