--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: default
         
         <div style="width:65%; float: left">
             <div class="profile-pic-gallary ">
-                <h2>Undergraduates/Graduates</h2>
+                <h2>Undergraduates</h2>
                 {% for ta in site.data.people.teaching_assistants %}
                 <div class="image--cover-container">
                     <img src="{{ta.profile_pic | prepend: site.baseurl }}" class="image--cover">
