--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,13 @@ layout: default
     {% include announcements.html %}
     <br />
 
-    <h2>Course Description</h2>
+    <h2>About KAI SQUARE</h2>
+    
+    <p> The Artificial Intelligence Institute of UofSC (AIISC) resulted in the university-wide excellence initiative.
+        It started with Prof. Amit Sheth, moving as the founding director, with his initial team in 2019. 
+        It has rapidly grown to over 25 researchers, with the joining of Prof. Biplav Srivastava, Forest Agostinelli, and Qi Zhang in 2020. 
+        As a university-wide institute, it already has collaborations with a majority of the colleges on the campus </p>
+    
     <p>{{ site.course_description }}</p>
     
     {{ content }}
