--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,9 +41,17 @@ layout: default
                     <img src="{{ta.profile_pic | prepend: site.baseurl }}" class="image--cover">
                     {% if ta.webpage %}
                     <p><a href="{{ ta.webpage }}">{{ta.name}}</a></p>
-                    {% else %}
+                     {% else %}
                     <p>{{ta.name}}</p>
                     {% endif %}
+                    <p> Admitted students should directly email Alex. 
+                        We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
+                        as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
+                        interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
+                        include "Prospective PhD: Abramson Lab" in the subject line. </p>
+
+               
+                   
                 </div>
                 {% endfor %}
             </div>
@@ -61,6 +69,12 @@ layout: default
                     {% else %}
                     <p>{{ta.name}}</p>
                     {% endif %}
+                    
+                     <p> Admitted students should directly email Alex. 
+                        We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
+                        as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
+                        interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
+                        include "Prospective PhD: Abramson Lab" in the subject line. </p>
                 </div>
                 {% endfor %}
             </div>
@@ -78,6 +92,13 @@ layout: default
                     {% else %}
                     <p>{{ta.name}}</p>
                     {% endif %}
+                    
+                     <p> Admitted students should directly email Alex. 
+                        We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
+                        as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
+                        interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
+                        include "Prospective PhD: Abramson Lab" in the subject line. </p>
+                    
                 </div>
                 {% endfor %}
             </div>
@@ -97,6 +118,12 @@ layout: default
                     {% else %}
                     <p>{{ta.name}}</p>
                     {% endif %}
+                     <p> Admitted students should directly email Alex. 
+                        We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
+                        as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
+                        interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
+                        include "Prospective PhD: Abramson Lab" in the subject line. </p>
+                    
                 </div>
                 {% endfor %}
             </div>
