--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@ layout: default
     
     {{ content }}
 
-    {% if site.data.previous_offering and site.data.previous_offering.offerings and site.data.previous_offering.offerings.size > 0 %}
-    <!--> >
-    <h2>Previous Offerings</h2>
+   
+     <!--> {% if site.data.previous_offering and site.data.previous_offering.offerings and site.data.previous_offering.offerings.size > 0 %}
+    ><h2>Previous Offerings</h2>
     <ul class="previous-offerings">
     {% for offer in site.data.previous_offering.offerings %}
     <li><a href="{{ offer.url }}">{{offer.title}}</a></li>
@@ -72,14 +72,16 @@ layout: default
                     <p>{{ta.name}}</p>
                     {% endif %}
                     
-                     <p> Admitted students should directly email Alex. 
+                     
+                {% endfor %}
+            </div>
+                
+                <p> Admitted students should directly email Alex. 
                         We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
                         as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
                         interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
                         include "Prospective PhD: Abramson Lab" in the subject line. </p>
                 </div>
-                {% endfor %}
-            </div>
         </div>
         
         
@@ -95,15 +97,17 @@ layout: default
                     <p>{{ta.name}}</p>
                     {% endif %}
                     
+                    
+                </div>
+                {% endfor %}
+            </div>
+           
+           
                      <p> Admitted students should directly email Alex. 
                         We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
                         as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
                         interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
                         include "Prospective PhD: Abramson Lab" in the subject line. </p>
-                    
-                </div>
-                {% endfor %}
-            </div>
         </div>
         
         
@@ -120,15 +124,17 @@ layout: default
                     {% else %}
                     <p>{{ta.name}}</p>
                     {% endif %}
-                     <p> Admitted students should directly email Alex. 
-                        We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
-                        as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
-                        interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
-                        include "Prospective PhD: Abramson Lab" in the subject line. </p>
+                    
                     
                 </div>
                 {% endfor %}
             </div>
+            
+             <p> Admitted students should directly email Alex. 
+                        We welcome students from a range of multidisciplinary backgrounds, including Chemical Engineering and Biomedical Engineering,
+                        as well as students from other departments such as Mechanical Engineering and Electrical Engineering affiliated with the 
+                        interdisciplinary bioengineering program. Inquiries should be sent to (alexgabramson at gmail dot com) and should
+                        include "Prospective PhD: Abramson Lab" in the subject line. </p>
         </div>
         
         <!--Uncomment if want instructor on page>
